fix tests, replace List.of with ImmutableList.of